<resources>
    <string name="app_name">coffeeProject</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_15">15</string>
    <string name="quantities">Quantities</string>

    <string name="_1">1</string>

    <string name="price">Price</string>
    <string name="rs_0_00">Rs. 0.00</string>
    <string name="order">Order</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="icy_sugar">Icy sugar</string>
    <string name="oreo_ice_blended">Oreo Ice Blended</string>
    <string name="choco_glaze">Choco Glaze</string>

</resources>
