<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:alpha="1"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context="com.app.sharma.coffeeproject.MainActivity">

    <TextView
        android:text=" COFFEE         IS            LIFE"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#030303"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:hint="Name:"
        android:textColor="#0ed3de"
        android:textColorHint="#41e214" />

    <TextView
        android:id="@+id/textViewQuantities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:text="@string/quantities"
        android:textStyle="bold"
        android:textColor="#ec0f51"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/textViewQuantitiesShow"
        android:layout_toStartOf="@+id/textViewQuantities"
        android:background="#34da17"
        android:gravity="center"
        android:onClick="increment"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewQuantitiesShow"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:gravity="center"
        android:text="@string/_1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#faf8f8"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/buttonPlus"
        android:layout_toEndOf="@+id/textViewQuantities"
        android:background="#ef0f0f"
        android:gravity="center"
        android:onClick="decrement"
        android:textStyle="bold"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="242dp"
        android:text="@string/price"
        android:textColor="#27c91b"
        android:textStyle="bold"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonPlus2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/textViewQuantitiesShow2"
        android:layout_toStartOf="@+id/textViewQuantities"
        android:background="#34da17"
        android:gravity="center"
        android:onClick="increment2"
        android:textStyle="bold"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewQuantitiesShow2"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="234dp"
        android:gravity="center"
        android:text="@string/_15"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonMinus2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/buttonPlus2"
        android:layout_toEndOf="@+id/textViewQuantities"
        android:background="#ef0f0f"
        android:gravity="center"
        android:onClick="decrement2"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="169dp"
        android:background="#fd302c2c">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

            <CheckBox
                android:id="@+id/whipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/icy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/icy_sugar" />

            <CheckBox
                android:id="@+id/oreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/oreo_ice_blended" />

            <CheckBox
                android:id="@+id/choco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/choco_glaze" />

        </LinearLayout>


    </HorizontalScrollView>

// havw to change this
    <TextView
        android:id="@+id/textViewPriceShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:gravity="center"
        android:text="@string/rs_0_00"
        android:textColor="#ec4a0f"
        android:textStyle="bold"
        android:textSize="26sp"
        />

    <Button
        android:id="@+id/buttonOrder"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="#84e712"
        android:onClick="order"
        android:text="@string/order"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp" />

</RelativeLayout>
